# rules-assignment

./: README.md  rules.code-workspace
rules-backend/: Cargo.toml
rules-backend/src/: lib.rs  rules.rs  types.rs
rules-client/: package.json
rules-client/public/: manifest.json
rules-client/src/: App.js
rules-client/src/contexts/: ResultContext.js
rules-client/src/layout/: AppLayout.js  MainLayout.js
rules-client/src/utils/: validation.js
rules-client/src/views/Home/: index.js
rules-client/src/views/Home/components/: Inputs.js  Results.js
rules-lib/: Cargo.toml
rules-lib/src/: errors.rs  lib.rs  rules.rs  types.rs
rules-server/: Cargo.toml
rules-server/src/: main.rs  processor.rs
