[package]
name = "rules-server"
version = "0.9.0"
authors = ["Elias Puma <elpumitaelias@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rules = { path = "../rules-lib" }

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json"]
